--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,4 +6,6 @@ COPY . .
 RUN npm run build
 
 FROM nginx AS final
+EXPOSE 3000
+COPY ./nginx.conf /etc/nginx/nginx.conf
 COPY --from=base /app/build /usr/share/nginx/html
