--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,61 @@
 version: '3'
 services:
+  nginx:
+    restart: always
+    build:
+      dockerfile: Dockerfile
+      context: ./nginx
+    ports:
+      - '4000:80'
   postgres:
     image: 'postgres:latest'
+    restart: always
+    ports:
+      - "5432:5432"
+    volumes:
+      - .:/data
+    environment:
+      - POSTGRES_PASSWORD=postgres_password
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=fibonacci
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
   redis:
     image: 'redis:latest'
   api:
+    depends_on:
+      - postgres
     build:
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
       context: ./api
+    ports:
+      - "5000:5000"
     volumes:
       - /app/node_modules
       - ./api:/app
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - PGUSER=postgres
-      - PGHOST=postgres
-      - PGDATABASE=postgres
-      - PGPASSWORD=postgres_password
-      - PGPORT=5432
+      - DB_HOST=postgres
+      - DB_USER=postgres
+      - DB_NAME=fib-calc
+    depends_on:
+      - postgres
   client:
     build:
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
       context: ./client
     volumes:
       - /app/node_modules
       - ./client:/app
   workers:
     build:
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
       context: ./worker
     volumes:
       - /app/node_modules
       - ./worker:/app
-  nginx:
-    restart: always
-    build:
-      dockerfile: dev.Dockerfile
-      context: ./nginx
-    ports:
-      - '4000:80'
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
