--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:alpine AS base
+FROM node:alpine as builder
 WORKDIR '/app'
-COPY package.json .
+COPY ./package.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx AS final
+FROM nginx
 EXPOSE 3000
-COPY ./nginx.conf /etc/nginx/nginx.conf
-COPY --from=base /app/build /usr/share/nginx/html
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/build /usr/share/nginx/html
